--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<!-- BEGIN CSS -->
 	<style>
-		/* TODO 1 */
+	
 		[class="box"] {
 			display: block;
 			position: absolute;
@@ -20,7 +20,7 @@
 			text-align: center;
 		}
 	</style>
-
+	
 </head>
 <body class="board">
 	<!-- HTML for the box -->
@@ -29,7 +29,7 @@
 	<!-- BEGIN JAVASCRIPT -->
 	<script>
 		(function(){
-			'use strict'
+			'use strict';
 
 			// Variable declarations
 			var box;
@@ -42,25 +42,44 @@
 			boardWidth = $('.board').width();
 
 			// TODO 2
-
+			var position;
+			var points;
+			var speed;
+			var direction;
+			
+			position = 0;
+			points = 0;
+			speed= 10;
+			direction = 1;
+			
+			box.css('left',position);
+			box.text(points);
 
 			// TODO 3 / 4
 			update = function() {
-
-			};
-
+        		position = position + (speed * direction);
+        		if(position > boardWidth) {
+        			direction = -1;
+        		}
+        		if (position < 0) {
+        			direction = 1;
+        		}
+        		box.css('left', position);
+        		box.text(points);
+    		};
 
 			// TODO 5 / 6
 			handleBoxClick = function() {
-
+				speed = speed + 3;
+				position = 0;
+				points = points + 1;
 			};
-
-
+			
 			//this calls update every 50 milliseconds
 			setInterval(update, 50);
 			// this calls the handle handleBoxClick function every time the box is clicked on
 			box.on('click', handleBoxClick);
-		})()
+		})();
 	</script>
 </body>
 </html>
